# walkman_armarx_bridge

./: .gitignore  CMakeLists.txt  package.xml
etc/cmake/: UseWalkmanBridge.cmake
scenarios/: CMakeLists.txt
scenarios/ArmarXROSBridge/: CMakeLists.txt
scenarios/ROSArmarXBridge/: CMakeLists.txt
scenarios/YarpSegmentationProvider/: CMakeLists.txt
source/: CMakeLists.txt
source/WalkmanBridge/: CMakeLists.txt
source/WalkmanBridge/applications/: CMakeLists.txt
source/WalkmanBridge/applications/PCLPointCloudProvider/: CMakeLists.txt  PCLPointCloudProviderApp.h  main.cpp
source/WalkmanBridge/applications/YarpSegmentationProvider/: CMakeLists.txt  YarpSegmentationProviderApp.h  main.cpp
source/WalkmanBridge/components/: CMakeLists.txt
source/WalkmanBridge/components/PCLPointCloudProvider/: CMakeLists.txt  PCLPointCloudProvider.cpp  PCLPointCloudProvider.h  package.xml
source/WalkmanBridge/components/PCLPointCloudProvider/test/: CMakeLists.txt  PCLPointCloudProviderTest.cpp
source/WalkmanBridge/components/YarpSegmentationProvider/: CMakeLists.txt  YarpPointCloudSegmentation.h  YarpSegmentationProvider.cpp  YarpSegmentationProvider.h
source/WalkmanBridge/components/YarpSegmentationProvider/test/: CMakeLists.txt  YarpSegmentationProviderTest.cpp  YarpSegmentationTestStandAlone.cpp
source/WalkmanBridge/interface/: CMakeLists.txt
