<package>
  <name>WalkmanBridge</name>
  <version>0.8.4</version>
  <description>
     bla bla bla
  </description>
  <maintainer email="mirko.ferrati@gmail.com">Mirko Ferrati</maintainer>
  <license>Unknown</license>

  <author>Mirko Ferrati</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
</package>
